backend/logs/scan_5f89053425fd.log
[2026-03-17 07:30:00] [INFO    ] [scan.5f89053425fd] [Recon] Discovering subdomains for naren.web.id...
[2026-03-17 07:30:00] [INFO    ] [scan.5f89053425fd] [Recon] Starting subdomain discovery for naren.web.id
[2026-03-17 07:30:02] [INFO    ] [scan.5f89053425fd] [Recon] subfinder OK (1.9s, 0 bytes)
[2026-03-17 07:30:09] [INFO    ] [scan.5f89053425fd] [Recon] assetfinder OK (8.7s, 56 bytes)
[2026-03-17 07:30:09] [INFO    ] [scan.5f89053425fd] [Recon] Done: 0 from subfinder, 4 from assetfinder, 2 unique total.
[2026-03-17 07:30:09] [INFO    ] [scan.5f89053425fd] [Resolver] Resolving 2 hosts...
[2026-03-17 07:30:09] [INFO    ] [scan.5f89053425fd] [Resolver] Resolving 2 hosts via dnsx
[2026-03-17 07:30:11] [INFO    ] [scan.5f89053425fd] [Resolver] dnsx OK (1.3s, 2224 bytes)
[2026-03-17 07:30:11] [INFO    ] [scan.5f89053425fd] [Resolver] Resolved 2 hosts, 1 unique IPs
[2026-03-17 07:30:11] [INFO    ] [scan.5f89053425fd] [OriginIP] Detecting origin IPs / CDN bypass...
[2026-03-17 07:30:11] [INFO    ] [scan.5f89053425fd] [OriginIP] Probing origin IP for naren.web.id
[2026-03-17 07:30:13] [INFO    ] [scan.5f89053425fd] [OriginIP] Found 1 IPs total. CDN: [], Origin: ['216.198.79.1']
[2026-03-17 07:30:13] [INFO    ] [scan.5f89053425fd] [PortScan] Scanning ports on 1 hosts...
[2026-03-17 07:30:13] [INFO    ] [scan.5f89053425fd] [PortScan] Scanning 1 hosts
[2026-03-17 07:30:22] [INFO    ] [scan.5f89053425fd] [PortScan] naabu OK (8.5s, 426 bytes)
[2026-03-17 07:30:22] [INFO    ] [scan.5f89053425fd] [PortScan] 2 open ports found across 1 hosts. Ports: [80, 443]
[2026-03-17 07:30:22] [INFO    ] [scan.5f89053425fd] [ServiceScan] Detecting services on 2 open ports...
[2026-03-17 07:30:22] [INFO    ] [scan.5f89053425fd] [ServiceScan] nmap on 1 target(s), 2 ports
[2026-03-17 07:32:26] [INFO    ] [scan.5f89053425fd] [ServiceScan] nmap OK (123.6s, 7635 bytes)
[2026-03-17 07:32:26] [INFO    ] [scan.5f89053425fd] [ServiceScan] Found 2 services, 0 OS matches
[2026-03-17 07:32:26] [INFO    ] [scan.5f89053425fd] [HTTPProbe] Probing HTTP/HTTPS endpoints...
[2026-03-17 07:32:26] [INFO    ] [scan.5f89053425fd] [HTTPProbe] Probing 4 URLs
[2026-03-17 07:32:27] [WARNING ] [scan.5f89053425fd] [HTTPProbe] Compatible ProjectDiscovery httpx not found — using curl fallback
[2026-03-17 07:32:28] [INFO    ] [scan.5f89053425fd] [HTTPProbe] 1 live hosts, tech: [], servers: []
[2026-03-17 07:32:28] [INFO    ] [scan.5f89053425fd] [VulnScan] Running vuln scan on 1 endpoints...
[2026-03-17 07:32:29] [INFO    ] [scan.5f89053425fd] [VulnScan] Starting Nuclei + Nikto in parallel
[2026-03-17 07:32:29] [INFO    ] [scan.5f89053425fd] [VulnScan] Primary URL: https://naren.web.id/
[2026-03-17 07:32:29] [WARNING ] [scan.5f89053425fd] [VulnScan] nuclei failed: 
[2026-03-17 07:32:42] [INFO    ] [scan.5f89053425fd] [VulnScan] nikto OK (13.2s, 2485 bytes)
[2026-03-17 07:32:42] [INFO    ] [scan.5f89053425fd] [VulnScan] Nuclei: 0 findings | Nikto: 26 findings
[2026-03-17 07:32:42] [INFO    ] [scan.5f89053425fd] [TLSScan] Analyzing TLS configuration for naren.web.id...
[2026-03-17 07:32:42] [INFO    ] [scan.5f89053425fd] [TLSScan] Analyzing TLS on naren.web.id:443
[2026-03-17 07:33:32] [INFO    ] [scan.5f89053425fd] [TLSScan] testssl.sh OK (49.9s, 11998 bytes)
[2026-03-17 07:33:32] [INFO    ] [scan.5f89053425fd] [TLSScan] 5 TLS findings
[2026-03-17 07:33:32] [INFO    ] [scan.5f89053425fd] [Aggregation] Aggregating and normalizing all results...
[2026-03-17 07:33:33] [INFO    ] [scan.5f89053425fd] [AIAnalysis] Running AI-powered security analysis...
[2026-03-17 07:33:37] [INFO    ] [scan.5f89053425fd] [Report] Generating professional PDF report...
[2026-03-17 07:33:37] [ERROR   ] [scan.5f89053425fd] Scan failed: paraparser: syntax error: parse ended with 1 unclosed tags
 para
Traceback (most recent call last):
  File "/home/ubuntu/pentestbot_2/core/job_manager.py", line 382, in _execute
    pdf_path = pdf_gen.generate(report_data)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 81, in generate
    story = self._build_story(report)
            ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 168, in _build_story
    story += self._section_findings_detail(r)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 598, in _section_findings_detail
    story += self._finding_card(i, finding)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 636, in _finding_card
    title_para = Paragraph(
                 ^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/reportlab/platypus/paragraph.py", line 1861, in __init__
    self._setup(text, style, bulletText or getattr(style,'bulletText',None), frags, cleanBlockQuotedText)
  File "/usr/local/lib/python3.12/dist-packages/reportlab/platypus/paragraph.py", line 1882, in _setup
    style, frags, bulletTextFrags = _parser.parse(text,style)
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/reportlab/platypus/paraparser.py", line 3221, in parse
    return self._complete_parse()
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/reportlab/platypus/paraparser.py", line 3155, in _complete_parse
    self._syntax_error('parse ended with %d unclosed tags\n %s' % (len(self._stack),'\n '.join((x.__tag__ for x in reversed(self._stack)))))
  File "/usr/local/lib/python3.12/dist-packages/reportlab/platypus/paraparser.py", line 2780, in _syntax_error
    raise ValueError('paraparser: syntax error: %s' % message)
ValueError: paraparser: syntax error: parse ended with 1 unclosed tags
 para

[2026-03-17 07:33:37] [INFO    ] [scan.5f89053425fd] [Error] Scan failed: paraparser: syntax error: parse ended with 1 unclosed tags
 para
